# encode-orc

./: .gitignore  CMakeLists.txt  IMPLEMENTATION-CHECKLIST.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION-VIDEO-LEVELS.md  README.md  io.github.simoninns.encode-orc.yml  run-tests.sh  verify_ntsc_vits.py  verify_vits.py
.github/workflows/: ci.yml  release.yml
archive/vits-investigation/: README.md  VITS_ISSUES.md  analyze_line19.py  analyze_vits_timing.py  debug_vits_burst.cpp  generate-iec60856-vits-test.sh  pal_laserdisc_line_allocator.cpp  pal_vits_signal_generator.cpp  test_vits_debug.cpp  test_vits_pal.cpp  verify_vits.cpp  verify_vits_lines.py  vits_composer.cpp  vits_composer.h  vits_line_allocator.h  vits_signal_generator.h
docs/: BANDPASS-FILTER-ANALYSIS.md  FILTER-IMPLEMENTATION.md  MOV-File-Support.md  MP4-File-Support.md  NTSC-VITS-Implementation.md  PAL-VITS-Implementation.md  PAL-VITS-definition.md  PAL-frame-and-field-numbering.md  Test-Signals.md  VBI.md  VITS-implementation-plan.md  implementation-plan.md  pal-encoder-status.md  phase-2.1-pal-implementation.md  reference-implementation-analysis.md  vision.md  yaml-project-format.md
docs/tmp/: ocr_output.txt
include/: biphase_encoder.h  blanking_encoder.h  cli_parser.h  cli_parser.hpp  color_burst_generator.h  color_conversion.h  field.h  fir_filter.h  frame_buffer.h  laserdisc_standard.h  logging.h  manchester_encoder.h  metadata.h  metadata_generator.h  metadata_writer.h  mov_loader.h  mp4_loader.h  ntsc_encoder.h  ntsc_vits_generator.h  pal_encoder.h  pal_vits_generator.h  png_loader.h  rgb30_loader.h  source_video_standard.h  tbc_writer.h  test_card_generator.h  version.h.in  video_encoder.h  video_loader_base.h  video_parameters.h  vitc_generator.h  yaml_config.h  yc_tbc_writer.h  yuv422_loader.h
scripts/: convert_mov_to_yuv422_ntsc.py  convert_mov_to_yuv422_pal.py  generate_ntsc_colorbars.py  generate_ntsc_yuv422_colorbars.py  generate_pal_yuv422_colorbars.py  measure_ntsc_phase.py
src/: biphase_encoder.cpp  blanking_encoder.cpp  cli_parser.cpp  color_burst_generator.cpp  color_conversion.cpp  logging.cpp  main.cpp  manchester_encoder.cpp  metadata_generator.cpp  metadata_writer.cpp  mov_loader.cpp  mp4_loader.cpp  ntsc_encoder.cpp  ntsc_vits_generator.cpp  pal_encoder.cpp  pal_vits_generator.cpp  png_loader.cpp  rgb30_loader.cpp  test_card_generator.cpp  video_encoder.cpp  video_loader_base.cpp  vitc_generator.cpp  yaml_config.cpp  yuv422_loader.cpp
test-projects/: README.md  ntsc-cav-eia.yaml  ntsc-clv-eia.yaml  ntsc-composite.yaml  ntsc-consumer-tape-composite-vitc.yaml  ntsc-consumer-tape-separate-yc-vitc.yaml  ntsc-consumer-tape.yaml  ntsc-j-yuv422-eia-75.yaml  ntsc-mp4-example.yaml  ntsc-mp4.yaml  ntsc-png-check.yaml  ntsc-rgb30-eia-100-filter-off.yaml  ntsc-rgb30-eia-100-filter-on.yaml  ntsc-rgb30-eia-100.yaml  ntsc-rgb30-eia-75-filter-off.yaml  ntsc-rgb30-eia-75-filter-on.yaml  ntsc-rgb30-eia-75-separate-yc-legacy.yaml  ntsc-rgb30-eia-75-separate-yc.yaml  ntsc-rgb30-eia-75.yaml  ntsc-separate-yc.yaml  ntsc-testcards-composite.yaml  ntsc-yuv422-eia-100.yaml  ntsc-yuv422-eia-75-filter-off.yaml  ntsc-yuv422-eia-75-filter-on.yaml  ntsc-yuv422-eia-75-separate-yc-legacy.yaml  ntsc-yuv422-eia-75-separate-yc.yaml  ntsc-yuv422-eia-75.yaml  pal-cav-ebu.yaml  pal-clv-ebu.yaml  pal-colorbars-filtered.yaml  pal-composite.yaml  pal-consumer-tape-composite-vitc.yaml  pal-consumer-tape-separate-yc-vitc.yaml  pal-consumer-tape.yaml  pal-mov-full.yaml  pal-mov-pluge.yaml  pal-mov-test.yaml  pal-mov-zone.yaml  pal-mov.yaml  pal-mp4-example.yaml  (+21 more)
testcard-images/: README-png.md  README-raw.md  README.md  ntsc-eia-colorbars-100.raw  pal-ebu-colorbars-100.raw
testcard-images/ntsc-raw/: 525_5994_100_BARS.raw  525_5994_75_BARS.raw  525_5994_75_BARS_RED.raw  525_5994_CHROMA_RAMP.raw  525_5994_FULL_RAMP.raw  525_5994_GREY_10H_STEP.raw  525_5994_GREY_10V_STEP.raw  525_5994_GREY_5H_STEP.raw  525_5994_GREY_5V_STEP.raw  525_5994_LEGAL_RAMP.raw  525_5994_LUMA_RAMP.raw  525_5994_LUMA_RAMP_DOWN.raw  525_5994_MULTIBURST.raw  525_5994_PLUGE.raw  525_5994_SMPTE_BARS_001.raw  525_5994_TARTAN.raw  525_5994_VALID_RAMPS.raw  525_5994_VERT_LUMA_RAMP.raw  525_5994_Y_CB_CR_RAMPS.raw  ntsc-eia-colorbars-100.raw  ntsc-eia-colorbars-75.raw
testcard-images/pal-raw/: 625_50_100_BARS.raw  625_50_75_BARS.raw  625_50_75_BARS_RED.raw  625_50_CHROMA_RAMP.raw  625_50_FULL_RAMP.raw  625_50_GREY_10H_STEP.raw  625_50_GREY_10V_STEP.raw  625_50_GREY_5H_STEP.raw  625_50_GREY_5V_STEP.raw  625_50_LEGAL_RAMP.raw  625_50_LUMA_RAMP.raw  625_50_LUMA_RAMP_DOWN.raw  625_50_SMPTE_BARS.raw  625_50_TARTAN.raw  625_50_VALID_RAMPS.raw  625_50_VERT_LUMA_RAMP.raw  625_50_Y_CB_CR_RAMPS.raw  pal-ebu-colorbars-100.raw  pal-ebu-colorbars-75.raw
testcard-images/pal-stephen-raw/: 625-50-i_Grating-1MHz@HD.raw  625-50-i_Grating-50kHz.raw  625-50-i_Grating-5MHz@HD.raw  625-50-i_Moving-Zone-2H.raw  625-50-i_Multiburst.raw  625-50-i_PLUGE.raw  625-50-i_Static-Zone-2H.raw  625-50-i_Static-Zone-2V.raw  625-50-i_Sweep-Horiz.raw  625-50-i_Sweep-Vert.raw  README.md
testcard-images/pal-wrwetzel-png/: README.md
tests/: CMakeLists.txt  analyze_chroma.cpp  analyze_signal.cpp  run-tests.sh  test_color_values.cpp  test_pal_encode_debug.cpp  test_pal_encoder.cpp  test_single_color.cpp
